--- a/GrafDemo/BNRTransformsWindowController.xib
+++ b/GrafDemo/BNRTransformsWindowController.xib
@@ -21,19 +21,21 @@
                 <rect key="frame" x="0.0" y="0.0" width="480" height="270"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
-                    <textField horizontalHuggingPriority="251" verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="OFl-xw-olC">
-                        <rect key="frame" x="221" y="109" width="51" height="17"/>
-                        <textFieldCell key="cell" scrollable="YES" lineBreakMode="clipping" sendsActionOnEndEditing="YES" title="Snorgle" id="Xkm-Tf-c93">
-                            <font key="font" metaFont="system"/>
-                            <color key="textColor" name="labelColor" catalog="System" colorSpace="catalog"/>
-                            <color key="backgroundColor" name="controlColor" catalog="System" colorSpace="catalog"/>
-                        </textFieldCell>
-                    </textField>
+                    <customView translatesAutoresizingMaskIntoConstraints="NO" id="hh4-TQ-rCY" customClass="TransformView" customModule="GrafDemo" customModuleProvider="target">
+                        <rect key="frame" x="166" y="20" width="294" height="230"/>
+                    </customView>
                 </subviews>
+                <constraints>
+                    <constraint firstAttribute="bottom" secondItem="hh4-TQ-rCY" secondAttribute="bottom" constant="20" id="8MU-re-MvE"/>
+                    <constraint firstItem="hh4-TQ-rCY" firstAttribute="top" secondItem="se5-gp-TjO" secondAttribute="top" constant="20" id="9gc-UR-Aa5"/>
+                    <constraint firstItem="hh4-TQ-rCY" firstAttribute="leading" secondItem="se5-gp-TjO" secondAttribute="leading" constant="166" id="9uS-QF-23R"/>
+                    <constraint firstAttribute="trailing" secondItem="hh4-TQ-rCY" secondAttribute="trailing" constant="20" id="xd0-oK-iAq"/>
+                </constraints>
             </view>
             <connections>
                 <outlet property="delegate" destination="-2" id="0bl-1N-AYu"/>
             </connections>
+            <point key="canvasLocation" x="207" y="324"/>
         </window>
     </objects>
 </document>
