Added reset button

--- a/GrafDemo/BNRTransformsWindowController.xib
+++ b/GrafDemo/BNRTransformsWindowController.xib
@@ -35,6 +35,16 @@
                             <action selector="animate:" target="-2" id="eiA-aJ-PD5"/>
                         </connections>
                     </button>
+                    <button verticalHuggingPriority="750" fixedFrame="YES" translatesAutoresizingMaskIntoConstraints="NO" id="p4n-DH-UJD">
+                        <rect key="frame" x="16" y="189" width="76" height="32"/>
+                        <buttonCell key="cell" type="push" title="Reset" bezelStyle="rounded" alignment="center" borderStyle="border" imageScaling="proportionallyDown" inset="2" id="QGa-0V-jnh">
+                            <behavior key="behavior" pushIn="YES" lightByBackground="YES" lightByGray="YES"/>
+                            <font key="font" metaFont="system"/>
+                        </buttonCell>
+                        <connections>
+                            <action selector="reset:" target="-2" id="Zbn-AY-g3I"/>
+                        </connections>
+                    </button>
                 </subviews>
                 <constraints>
                     <constraint firstAttribute="bottom" secondItem="hh4-TQ-rCY" secondAttribute="bottom" constant="20" id="8MU-re-MvE"/>
